# Calendario-GMUD

./: ACESSO_REDE.md  COMECE_AQUI.txt  COMO_BAIXAR_DOCUMENTOS.md  DEPLOYMENT.md  DOCUMENTOS.md  Dockerfile  GUIA_RAPIDO.md  INICIAR.bat  INICIAR.sh  QUICKSTART.md  README.md  VM_DEPLOYMENT.md  dev.bat  dev.sh  docker-compose.yml  gmuds.db  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  database.py
app/models/: __init__.py  gmud.py
app/routers/: __init__.py  gmuds.py
app/schemas/: # main.py  __init__.py  gmud.py
app/services/: __init__.py  document.py  glpi.py
static/: index.html
static/css/: style.css
static/images/: README.txt
static/js/: app.js
tests/: conftest.py  test_api.py
