[project]
name = "calendario-gmud"
version = "1.0.0"
description = "Sistema de Gestão de Manutenção de Equipamentos"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "python-multipart==0.0.6",
    "python-docx==0.8.11",
]

[tool.uv]
python-version = "3.14"
